added comments to code to finish assignment

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,11 +1,23 @@
-<!-- this is how i make a commenet explaining why i chose the semantics i did.
-I wanted the video to take centre stage,  it should be large enough and have all 
-its controls underneath.
-So to achieve this, I went for a flex:column layout where I divided
-the centre box into three sections
-1.video-container: this section contains the video
-2.video-controls: this section contains the buttons to control the video
-3.timeline: this section allows navigating to different time stamps -->
+<!-- This is my logic and reasoning for the elements I included in my media player design.
+
+1. I decided that since my media player was designed for focus and meditation, that I 
+would keep the design simple and without many distractions. I had the main audio player
+be the focus so the design was front and center, whilst having the added ambience buttons 
+below as an addition for the user. 
+
+2. I decided that since I was only able to use one audio, I would have a play/pause, 
+volume and mute buttons. This makes the UI simple for the user and ensures the design isnt too 
+overwhelming. 
+
+3. The ambient buttons are an addition for the user so they're able to add meditative sounds 
+to the main audio. I decided that from my own experience that using ambience like rain sounds 
+when studying along with music which is why I felt like adding this option would improve the 
+media player. 
+
+4. I also decided to add a subheading of motivational words. I know in class I was given some code
+to create a randomiser with an array but I could not figure out how to get it to work and I 
+tried really hard to! But I felt like I should try honour the idea the best I could so I added them
+as a subheading. -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -83,7 +95,7 @@ the centre box into three sections
                 </section>
                 <section class="messages">
                 </section>
-
+<!-- I used breaks here as I forgot how to add spacing sorry :( -->
                 <br>
                 <br>
                 <br>
@@ -100,19 +112,6 @@ the centre box into three sections
                   <button id="transport">transport</button>
                   <button id="outdoors">outdoors</button>
                 </div>
-        <!-- <button id="fullscreen-btn">
-          <img
-            id="fullscreen-img"
-            src="https://img.icons8.com/ios-glyphs/30/full-screen--v1.png"
-            alt="Fullscreen Button"
-            width="48"
-            height="48"
-          /> -->
-      
-      <!-- <section class="timeline">
-        <button id="step-one-btn">step one</button>
-        <button id="step-two-btn">step two</button>
-      </section> -->
       </div>
     <footer> All icons Sourced from <a href ="Icons8.com"> icons8.com</a> / Ambient Noise sourced from <a href="www.soundjay.com">soundjay.com</a></footer>
   </body>
