--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Video Player Example</title>
+    <title>seasonal survey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -98,7 +98,7 @@
 </div>
 
                 <div class="next-question">
-                <button id="next-question" onclick="window.location.href='../assignment3/question2/index.html'> <p>next question</p> </button>
+                <button id="next-question" id="nextbutton"> <p>next question</p></button>
                 </div>
       </div>
     <footer> All images sourced from <a href ="unsplash.com"> unsplash.com</a></footer>
