--- a/QUIZ/index.html
+++ b/QUIZ/index.html
@@ -69,8 +69,8 @@ as a subheading. -->
 <div id="wrapper">
     <div id="first">
                 <div class="answers">
-                    <div class="inner" id="text-answer" ondragover="allowDrop(event)">
-                  <div class="image" draggable="true" ondragstart="drag(event)" id="drag1">
+                    <div class="inner" id="text-answer" ondragover="allowDrop(event)" >
+                  <div class="image" draggable="true" ondragstart="drag(event)" id="drag1" >
                     <h4>summer</h4>
                 </div>
                         
@@ -115,7 +115,7 @@ as a subheading. -->
 </div>
 
                 <div class="next-question">
-                <button id="next-question" onclick="reset"> <p>next question</p></button>
+                <button id="next-question" value="reset"  onclick="reset1();"> <p>next question</p></button>
                 </div>
       </div>
     <footer> All images sourced from <a href ="unsplash.com"> unsplash.com</a></footer>
