--- a/youtubequiz/index.html
+++ b/youtubequiz/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Buzzfeed Quiz Clone</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
@@ -12,6 +12,6 @@
       <div id="questions"></div>
       <div id="answer"></div>
     </section>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
