upload final assignment

--- a/ROHITQUIZ/index.html
+++ b/ROHITQUIZ/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- my comments are on the stylesheet and js files -->
   <head>
     <meta charset="UTF-8" />
     <title>seasonal survey</title>
